[tool.poetry]
name = "boto-collator-client"
version = "0.1.1"
description = "A boto3 client wrapper that collates each paginated API call into a single result"
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
boto3 = "^1.19.5"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
